--- a/components/net_handler/CMakeLists.txt
+++ b/components/net_handler/CMakeLists.txt
@@ -1,4 +1,4 @@
- set(srcs "net_handler.c")
+set(srcs "net_handler.c")
 
 if(CONFIG_ACTIVE_WIFI)
     list(APPEND srcs "net_wifi.c")
@@ -6,7 +6,7 @@ endif()
 if(CONFIG_ACTIVE_ETHERNET)
     list(APPEND srcs "net_eth.c")
 endif()
-idf_component_register(SRCS "net_handler.c"
+idf_component_register(SRCS ${srcs}
                     INCLUDE_DIRS "."
 					REQUIRES "esp_http_server")
 				
