--- a/components/sensor/CMakeLists.txt
+++ b/components/sensor/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "sensor.c"
                     INCLUDE_DIRS "."
-					REQUIRES "config")
+					REQUIRES "config esp8266_wrapper")
 				
