--- a/libraries/sht3x/CMakeLists.txt
+++ b/libraries/sht3x/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(COMPONENT_ADD_INCLUDEDIRS .)
 
 # Edit following two lines to set component requirements (see docs)
-set(COMPONENT_REQUIRES esp8266_wrapper)
+set(COMPONENT_REQUIRES esp8266_wrapper sensor)
 set(COMPONENT_PRIV_REQUIRES )
 
 set(COMPONENT_SRCS ./sht3x.c)
