Add in some delays to i2c handling, d7s is now working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "sensor.h": "c",
         "i2c.h": "c",
         "sht3x.h": "c",
-        "esp_event.h": "c"
+        "esp_event.h": "c",
+        "*.tcc": "cpp",
+        "*.ipp": "cpp",
+        "ostream": "cpp"
     }
 }
