--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "components/tarablessd1306"]
 	path = libraries/tarablessd1306
 	url = git@github.com:sanjay900/tarablessd1306.git
+[submodule "libraries/espfs"]
+	path = libraries/espfs
+	url = https://github.com/jkent/esp32-espfs
+[submodule "libraries/libesphttpd"]
+	path = libraries/libesphttpd
+	url = https://github.com/jkent/libesphttpd
