Config is now fully working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,9 @@
         "string.h": "c",
         "net_handler.h": "c",
         "netif.h": "c",
-        "esp_netif_net_stack.h": "c"
+        "esp_netif_net_stack.h": "c",
+        "freertos.h": "c",
+        "esp_log.h": "c"
     },
     "python.pythonPath": "C:\\Users\\sanjay.govind\\.espressif\\python_env\\idf4.1_py3.7_env\\Scripts\\python.exe"
 }
