--- a/components/config/CMakeLists.txt
+++ b/components/config/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "config.c"
+idf_component_register(SRCS "cgi.c" "config.c"
                     INCLUDE_DIRS "."
-					REQUIRES "nvs_flash spiffs")
+					REQUIRES "nvs_flash spiffs libesphttpd")
 				
