--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Edit following two lines to set component requirements (see docs)
 
-set(COMPONENT_SRCS "cgi.c" "main.c")
+set(COMPONENT_SRCS "main.c")
 set(COMPONENT_ADD_INCLUDEDIRS "")
 
 register_component()
